Testons le modèle

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7b95ebdb",
+   "id": "5508e560",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2022ad",
+   "id": "7c4f655d",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb4ff787",
+   "id": "5bd2209d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b312b8d4",
+   "id": "3ba6bcc2",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a1e389d5",
+   "id": "41bd2b77",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd8a31eb",
+   "id": "76b7383d",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "708026bc",
+   "id": "eca8bd64",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f994c41",
+   "id": "e6a6a94d",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f744464b",
+   "id": "2633c062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0351eb6c",
+   "id": "ffc1fae0",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "533dc5b8",
+   "id": "75a5f292",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e375485b",
+   "id": "f9c6c8ee",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58a3abb1",
+   "id": "653d4d9d",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bae88ef",
+   "id": "667124e5",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ad2c631e",
+   "id": "5cf700ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +206,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ff177bd",
+   "metadata": {},
+   "source": [
+    "## Création du modèle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "78c4e259",
+   "execution_count": 9,
+   "id": "ff3e20d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "def modele(X, W, b):\n",
+    "    Z = X.dot(W) + b\n",
+    "    A = sigmoid(Z)\n",
+    "    \n",
+    "    return A"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef181a41",
+   "metadata": {},
+   "source": [
+    "## Testons le  modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5b0c5dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
