Determinons la fonction coût

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5508e560",
+   "id": "7755e919",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4f655d",
+   "id": "810182fc",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5bd2209d",
+   "id": "2b8326d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba6bcc2",
+   "id": "b4b48466",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41bd2b77",
+   "id": "3f7faa88",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b7383d",
+   "id": "9f3f33ef",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eca8bd64",
+   "id": "f3d9e1e6",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6a6a94d",
+   "id": "e250d330",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2633c062",
+   "id": "43413f9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffc1fae0",
+   "id": "906cb99c",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "75a5f292",
+   "id": "561c1084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f9c6c8ee",
+   "id": "7c00439a",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "653d4d9d",
+   "id": "edd819b7",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "667124e5",
+   "id": "eb4de4ea",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5cf700ac",
+   "id": "1c939e13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ff177bd",
+   "id": "c2601084",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ff3e20d9",
+   "id": "9b0bcc56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef181a41",
+   "id": "16a9fd72",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -237,11 +237,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5b0c5dd",
+   "execution_count": 10,
+   "id": "7b7651ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A = modele(X, W,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7111b74a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 1)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85e3a3c2",
+   "metadata": {},
+   "source": [
+    "## Determinons la fonction coût"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6580ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fonction_"
+   ]
   }
  ],
  "metadata": {
