Testons la fonction coût

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7755e919",
+   "id": "f98234ec",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "810182fc",
+   "id": "79df9e4f",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b8326d4",
+   "id": "e22dc28d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b48466",
+   "id": "5e728f9a",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3f7faa88",
+   "id": "44f19459",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3f33ef",
+   "id": "1fd24e47",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f3d9e1e6",
+   "id": "34972eb7",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e250d330",
+   "id": "25ddc579",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43413f9c",
+   "id": "0efb9bab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906cb99c",
+   "id": "39a4ce0c",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "561c1084",
+   "id": "630fa246",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7c00439a",
+   "id": "16058b32",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "edd819b7",
+   "id": "e62e6c9d",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb4de4ea",
+   "id": "727e2b57",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1c939e13",
+   "id": "d5f1a010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2601084",
+   "id": "db10ec84",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9b0bcc56",
+   "id": "2b8cd636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a9fd72",
+   "id": "b2c6e104",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7b7651ca",
+   "id": "35f4701a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7111b74a",
+   "id": "f172f7c8",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85e3a3c2",
+   "id": "17d6a466",
    "metadata": {},
    "source": [
     "## Determinons la fonction coût"
@@ -276,12 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a6580ff9",
+   "execution_count": 13,
+   "id": "6b4ab871",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fonction_"
+    "def fonction_cout(A, y):\n",
+    "    L = 1 / len(y) * np.sum(-y * log(A) - (1 - y) * log(1 - A))\n",
+    "    \n",
+    "    return L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bdf1e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Testons la fonction coût"
    ]
   }
  ],
