--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f98234ec",
+   "id": "5e5905e4",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79df9e4f",
+   "id": "ffcda75d",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e22dc28d",
+   "id": "d0c93805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e728f9a",
+   "id": "200094b3",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "44f19459",
+   "id": "284ab043",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fd24e47",
+   "id": "3629524e",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "34972eb7",
+   "id": "4b9e1b9f",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ddc579",
+   "id": "fd982ca2",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0efb9bab",
+   "id": "557ad045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a4ce0c",
+   "id": "450d5ed5",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "630fa246",
+   "id": "0092a81f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "16058b32",
+   "id": "7f1b53d0",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e62e6c9d",
+   "id": "3a84e323",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "727e2b57",
+   "id": "64ce1006",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d5f1a010",
+   "id": "2947e04f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db10ec84",
+   "id": "e781f24f",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2b8cd636",
+   "id": "996d9183",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2c6e104",
+   "id": "6e728a97",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "35f4701a",
+   "id": "af46080b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f172f7c8",
+   "id": "8c7933d4",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d6a466",
+   "id": "2763065e",
    "metadata": {},
    "source": [
     "## Determinons la fonction coût"
@@ -276,25 +276,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6b4ab871",
+   "execution_count": 15,
+   "id": "afa47bde",
    "metadata": {},
    "outputs": [],
    "source": [
     "def fonction_cout(A, y):\n",
-    "    L = 1 / len(y) * np.sum(-y * log(A) - (1 - y) * log(1 - A))\n",
+    "    L = 1 / len(y) * np.sum(-y * np.log(A) - (1 - y) * np.log(1 - A))\n",
     "    \n",
     "    return L"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe8b3645",
+   "metadata": {},
+   "source": [
+    "## Testons la fonction coût"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2bdf1e7b",
+   "execution_count": 16,
+   "id": "9f65d4bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Testons la fonction coût"
+    "Loss = fonction_cout(A, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "132a7c8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.527059734522911"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d07e380b",
+   "metadata": {},
+   "source": [
+    "## Determination des gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "202ae6ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradients(X, A, y, learning_rate):\n",
+    "    dW = 1 / len(y) * np.dot(X.T, A-y)\n",
+    "    db = 1 / 1"
    ]
   }
  ],
