--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e5905e4",
+   "id": "4bf16838",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffcda75d",
+   "id": "217138d1",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0c93805",
+   "id": "6a8b560c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200094b3",
+   "id": "6f438e87",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "284ab043",
+   "id": "43c11c20",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3629524e",
+   "id": "32ffee16",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4b9e1b9f",
+   "id": "86b5861a",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd982ca2",
+   "id": "d9e37675",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "557ad045",
+   "id": "447bd83e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450d5ed5",
+   "id": "6d2b753e",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0092a81f",
+   "id": "e63c44fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7f1b53d0",
+   "id": "e4166710",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3a84e323",
+   "id": "fbc2ba8a",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ce1006",
+   "id": "d3e28691",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2947e04f",
+   "id": "327c6ce9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e781f24f",
+   "id": "a84dc561",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "996d9183",
+   "id": "edb07767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e728a97",
+   "id": "2dd8a49e",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "af46080b",
+   "id": "3bec6aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8c7933d4",
+   "id": "2396b11c",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2763065e",
+   "id": "2e159f5e",
    "metadata": {},
    "source": [
     "## Determinons la fonction coût"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "afa47bde",
+   "id": "440e714e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe8b3645",
+   "id": "ac315dc1",
    "metadata": {},
    "source": [
     "## Testons la fonction coût"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9f65d4bb",
+   "id": "49506417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "132a7c8b",
+   "id": "0228b6cf",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d07e380b",
+   "id": "9fbde573",
    "metadata": {},
    "source": [
     "## Determination des gradients"
@@ -336,15 +336,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "202ae6ed",
+   "execution_count": 18,
+   "id": "a9516aee",
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradients(X, A, y, learning_rate):\n",
-    "    dW = 1 / len(y) * np.dot(X.T, A-y)\n",
-    "    db = 1 / 1"
+    "    dW = 1 / len(y) * np.dot(X.T, A - y)\n",
+    "    db = 1 / len(y) * np.sum(A - y)\n",
+    "    \n",
+    "    return (dW, db)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85311fe0",
+   "metadata": {},
+   "source": [
+    "## Testons les Gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6df71230",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dW, db = gradients(X, A, y, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "be573330",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.29865369],\n",
+       "       [0.88878096]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "092709ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17497246350272477"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "986056bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
