--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4bf16838",
+   "id": "b479112d",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217138d1",
+   "id": "d7b6d158",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a8b560c",
+   "id": "e664a688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f438e87",
+   "id": "642f3d71",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43c11c20",
+   "id": "61dfbfea",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ffee16",
+   "id": "76a866ef",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "86b5861a",
+   "id": "d7b97095",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e37675",
+   "id": "93186a2f",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "447bd83e",
+   "id": "e05e3f7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2b753e",
+   "id": "4df0fdef",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e63c44fc",
+   "id": "c0c646c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e4166710",
+   "id": "2e0ced6c",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fbc2ba8a",
+   "id": "a6f84bcd",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e28691",
+   "id": "7a984d59",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "327c6ce9",
+   "id": "5254017a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84dc561",
+   "id": "96a9baa2",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "edb07767",
+   "id": "490492ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd8a49e",
+   "id": "9525ffca",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3bec6aea",
+   "id": "f5dc6166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2396b11c",
+   "id": "6b26f47f",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e159f5e",
+   "id": "8e03e32f",
    "metadata": {},
    "source": [
     "## Determinons la fonction coût"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "440e714e",
+   "id": "98dcb44d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac315dc1",
+   "id": "320f9713",
    "metadata": {},
    "source": [
     "## Testons la fonction coût"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "49506417",
+   "id": "6fde2247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0228b6cf",
+   "id": "cb295ccb",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbde573",
+   "id": "bea7bbfd",
    "metadata": {},
    "source": [
     "## Determination des gradients"
@@ -337,11 +337,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a9516aee",
+   "id": "6522e2a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradients(X, A, y, learning_rate):\n",
+    "def gradients(X, A, y):\n",
     "    dW = 1 / len(y) * np.dot(X.T, A - y)\n",
     "    db = 1 / len(y) * np.sum(A - y)\n",
     "    \n",
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85311fe0",
+   "id": "98a119f3",
    "metadata": {},
    "source": [
     "## Testons les Gradients"
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6df71230",
+   "id": "e35879a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "be573330",
+   "id": "230303e8",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "092709ee",
+   "id": "12124376",
    "metadata": {},
    "outputs": [
     {
@@ -410,12 +410,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74c25e8f",
+   "metadata": {},
+   "source": [
+    "## Algorithme de mise à jour des paramètres W et b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "986056bc",
+   "id": "142b00e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def update(dW, db, W, b, lear)"
+   ]
   }
  ],
  "metadata": {
