Testons l'Algorithme de mise à jour des paramètres W et b

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b479112d",
+   "id": "7bf2b8f1",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7b6d158",
+   "id": "2a09a25f",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e664a688",
+   "id": "73073149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "642f3d71",
+   "id": "26544a64",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "61dfbfea",
+   "id": "105ff5f4",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76a866ef",
+   "id": "6728aedb",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7b97095",
+   "id": "9a56c95e",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93186a2f",
+   "id": "b1591fb2",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e05e3f7f",
+   "id": "c4569cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df0fdef",
+   "id": "8a910f06",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c0c646c5",
+   "id": "743280ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2e0ced6c",
+   "id": "ea060a7d",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a6f84bcd",
+   "id": "197c5f2e",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a984d59",
+   "id": "8149991c",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5254017a",
+   "id": "0d1b5c67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a9baa2",
+   "id": "caf931f1",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "490492ed",
+   "id": "4fb519ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9525ffca",
+   "id": "2c57a70b",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f5dc6166",
+   "id": "413a1c1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6b26f47f",
+   "id": "1fca92b0",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e03e32f",
+   "id": "dd2e60b9",
    "metadata": {},
    "source": [
     "## Determinons la fonction coût"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "98dcb44d",
+   "id": "53194789",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320f9713",
+   "id": "2d39c21e",
    "metadata": {},
    "source": [
     "## Testons la fonction coût"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6fde2247",
+   "id": "e8dc7a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cb295ccb",
+   "id": "917929e7",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bea7bbfd",
+   "id": "92db2985",
    "metadata": {},
    "source": [
     "## Determination des gradients"
@@ -336,8 +336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6522e2a9",
+   "execution_count": 23,
+   "id": "ed33e2d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a119f3",
+   "id": "6ff83789",
    "metadata": {},
    "source": [
     "## Testons les Gradients"
@@ -358,18 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "e35879a5",
+   "execution_count": 24,
+   "id": "cd2ed651",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dW, db = gradients(X, A, y, 0.1)"
+    "dW, db = gradients(X, A, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "230303e8",
+   "execution_count": 25,
+   "id": "df777d4a",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "       [0.88878096]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,8 +390,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "12124376",
+   "execution_count": 26,
+   "id": "dd05b7f8",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "0.17497246350272477"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c25e8f",
+   "id": "0b44eadb",
    "metadata": {},
    "source": [
     "## Algorithme de mise à jour des paramètres W et b"
@@ -419,13 +419,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "142b00e2",
+   "execution_count": 27,
+   "id": "c84a2dae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update(dW, db, W, b, lear)"
+    "def update(dW, db, W, b, learning_rate):\n",
+    "    W = W - learning_rate * dW\n",
+    "    b = b - learning_rate * db\n",
+    "    \n",
+    "    return (W, b)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e3e87c5",
+   "metadata": {},
+   "source": [
+    "## Testons l'Algorithme de mise à jour des paramètres W et b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32f82006",
+   "metadata": {},
+   "source": [
+    "### W, b AVANT MISE A JOUR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "41d77413",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1.6442544 ],\n",
+       "        [-0.37450607]]),\n",
+       " array([-0.11659903]))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "602fbf26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W, b = update(dW, db, W, b, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8369c4d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1.61438903],\n",
+       "        [-0.46338417]]),\n",
+       " array([-0.13409627]))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ce38f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
