Ensemblages des differentes algorithme pour l'algorithme de descente de gradient¶

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bf2b8f1",
+   "id": "47c87523",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a09a25f",
+   "id": "a326a267",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "73073149",
+   "id": "3f55d292",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26544a64",
+   "id": "914201fb",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "105ff5f4",
+   "id": "e0af1e49",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6728aedb",
+   "id": "c34208e2",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a56c95e",
+   "id": "ce938168",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1591fb2",
+   "id": "9946954a",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c4569cf0",
+   "id": "22c2f062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a910f06",
+   "id": "84ab099b",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "743280ab",
+   "id": "bb496174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea060a7d",
+   "id": "d1943e89",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "197c5f2e",
+   "id": "5b9e4f9f",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8149991c",
+   "id": "e531571f",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0d1b5c67",
+   "id": "932b7f3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caf931f1",
+   "id": "deed01d8",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4fb519ff",
+   "id": "559b2d54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c57a70b",
+   "id": "68a63d6e",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "413a1c1d",
+   "id": "cc5cc5b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1fca92b0",
+   "id": "084f0920",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd2e60b9",
+   "id": "e89a9a1b",
    "metadata": {},
    "source": [
     "## Determinons la fonction coût"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "53194789",
+   "id": "129efe22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d39c21e",
+   "id": "3b8c4a62",
    "metadata": {},
    "source": [
     "## Testons la fonction coût"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e8dc7a82",
+   "id": "f3a949f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "917929e7",
+   "id": "601056b2",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92db2985",
+   "id": "5ba982e2",
    "metadata": {},
    "source": [
     "## Determination des gradients"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ed33e2d1",
+   "id": "c171a58f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ff83789",
+   "id": "6b0b71bd",
    "metadata": {},
    "source": [
     "## Testons les Gradients"
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cd2ed651",
+   "id": "6e4f0f92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "df777d4a",
+   "id": "55df33b1",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "dd05b7f8",
+   "id": "33ef0806",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b44eadb",
+   "id": "d7f98e7c",
    "metadata": {},
    "source": [
     "## Algorithme de mise à jour des paramètres W et b"
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c84a2dae",
+   "id": "d0406f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3e87c5",
+   "id": "f62f6fa6",
    "metadata": {},
    "source": [
     "## Testons l'Algorithme de mise à jour des paramètres W et b"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f82006",
+   "id": "7eb00192",
    "metadata": {},
    "source": [
     "### W, b AVANT MISE A JOUR"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "41d77413",
+   "id": "ccfb7b01",
    "metadata": {},
    "outputs": [
     {
@@ -471,9 +471,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64068acb",
+   "metadata": {},
+   "source": [
+    "### W, b APRES MISE A JOUR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "602fbf26",
+   "id": "3e9d4e55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8369c4d4",
+   "id": "7c990353",
    "metadata": {},
    "outputs": [
     {
@@ -504,12 +512,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "675b4b6d",
+   "metadata": {},
+   "source": [
+    "## Ensemblages des differentes algorithme pour l'algorithme de descente de gradient"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ce38f3f",
+   "id": "e189d903",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def algo_descente_gradient(X,y, learning_rate = 0.1, epochs = 100):\n",
+    "    ## Initialisation des paramètres\n",
+    "    W, b = initialisation(X)\n",
+    "    \n",
+    "    Loss = []\n",
+    "    ## Entrainement et amelioration des paramètre en fonction des sorties souhaités\n",
+    "    for i in range(epochs):\n",
+    "        ## appel du model \n",
+    "        A = modele(X, W, b)\n",
+    "        \n",
+    "        ## Calcule des coût\n",
+    "        Loss.append(fonction_cout(A, y))\n",
+    "        \n",
+    "        ## Calcule des gradients\n",
+    "        dW, db = gradients(X, A, y)\n",
+    "        \n",
+    "        ## Optimisation des paramètres\n",
+    "        W, b = "
+   ]
   }
  ],
  "metadata": {
