Ensemblages des differentes algorithme pour l'algorithme de descente de gradient¶

--- a/python/algorith_gradient_descent.ipynb
+++ b/python/algorith_gradient_descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "47c87523",
+   "id": "39a15c8d",
    "metadata": {},
    "source": [
     "# Implement de l'algorithme de la descente de Gradient en Deep Learning"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a326a267",
+   "id": "2aea394e",
    "metadata": {},
    "source": [
     "## Importation des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3f55d292",
+   "id": "4cd50bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914201fb",
+   "id": "a4422e68",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0af1e49",
+   "id": "db302049",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34208e2",
+   "id": "49f8b498",
    "metadata": {},
    "source": [
     "## Répresentation graphique des données"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ce938168",
+   "id": "4f810af5",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9946954a",
+   "id": "caf2ac7d",
    "metadata": {},
    "source": [
     "## Création de la fonction initialisation"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "22c2f062",
+   "id": "96e426db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ab099b",
+   "id": "efb87ee6",
    "metadata": {},
    "source": [
     "## Testons la fonction d'initialisation"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bb496174",
+   "id": "9b3e2c04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d1943e89",
+   "id": "e9298374",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5b9e4f9f",
+   "id": "0e5fe12f",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e531571f",
+   "id": "89b4e510",
    "metadata": {},
    "source": [
     "## Création de la fonction d'action"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "932b7f3a",
+   "id": "42ce94ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deed01d8",
+   "id": "4e659269",
    "metadata": {},
    "source": [
     "## Création du modèle"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "559b2d54",
+   "id": "4d8dac4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68a63d6e",
+   "id": "2e36e7b8",
    "metadata": {},
    "source": [
     "## Testons le  modèle"
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cc5cc5b7",
+   "id": "b2557b26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "084f0920",
+   "id": "c85b12db",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89a9a1b",
+   "id": "9f54acab",
    "metadata": {},
    "source": [
     "## Determinons la fonction coût"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "129efe22",
+   "id": "62ac06e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b8c4a62",
+   "id": "2c45864e",
    "metadata": {},
    "source": [
     "## Testons la fonction coût"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f3a949f9",
+   "id": "76db85a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "601056b2",
+   "id": "ae91bb95",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba982e2",
+   "id": "cb1d5a92",
    "metadata": {},
    "source": [
     "## Determination des gradients"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c171a58f",
+   "id": "6a58e2f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0b71bd",
+   "id": "2f5e9bfc",
    "metadata": {},
    "source": [
     "## Testons les Gradients"
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6e4f0f92",
+   "id": "4085f9d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "55df33b1",
+   "id": "e6a808d9",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "33ef0806",
+   "id": "76b42197",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7f98e7c",
+   "id": "66fcdf78",
    "metadata": {},
    "source": [
     "## Algorithme de mise à jour des paramètres W et b"
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d0406f06",
+   "id": "a3699ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62f6fa6",
+   "id": "12480e6d",
    "metadata": {},
    "source": [
     "## Testons l'Algorithme de mise à jour des paramètres W et b"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eb00192",
+   "id": "bd0f3d60",
    "metadata": {},
    "source": [
     "### W, b AVANT MISE A JOUR"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ccfb7b01",
+   "id": "b0b52b2a",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64068acb",
+   "id": "39cfc4d9",
    "metadata": {},
    "source": [
     "### W, b APRES MISE A JOUR"
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3e9d4e55",
+   "id": "28179b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7c990353",
+   "id": "dbdf81dc",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675b4b6d",
+   "id": "9ce6b7a0",
    "metadata": {},
    "source": [
     "## Ensemblages des differentes algorithme pour l'algorithme de descente de gradient"
@@ -521,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e189d903",
+   "execution_count": 32,
+   "id": "686cfd75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,8 +543,22 @@
     "        dW, db = gradients(X, A, y)\n",
     "        \n",
     "        ## Optimisation des paramètres\n",
-    "        W, b = "
+    "        W, b = update(dW, db, W, b, learning_rate)\n",
+    "        \n",
+    "    ## Affichage de la courbe d'apprentissage\n",
+    "    pl.figure(figsize(8,4))\n",
+    "    plt.plot(Loss)\n",
+    "    \n",
+    "    return (W, b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba505b09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
